dependencies = [
    "mcp>=1.0.0",      # ← agregado
    "pillow>=12.1.0",
    "zensical>=0.0.19",
]

[project.scripts]
typhon-mcp = "iacriolla.typhon_mcp.server:main"   # ← agregado

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iacriolla"]